# rfq-quoting-pipeline

./: .env.example  .gitignore  README.md  env.example  pyproject.toml  run_inbox.py  run_review_api.py  run_ui.py
.streamlit/: config.toml
data/: settings.example.json  settings.json  stammdaten.csv  stammdaten_test.csv
data/raw/: Kalkulation 245868 HST 1,8zu1 1,1x0,5x0,31 nat 103,5 mm.xlsx  ZKALK_229257.xlsx  ZKALK_239308.xlsx  ZKALK_242965.xlsx  ZKALK_244642.xlsx
docs/: architecture.md
docs/decisions/: 001-no-llm-in-matching-or-pricing.md  002-certificates-flat-surcharge.md  003-stammdaten-repository.md
outlook-test-addin/: manifest.xml
outlook-test-addin/src/: external.tsx  mailWorkflowStorage.ts  main.tsx  style.css  types.ts
outlook-test-addin/src/api/: reviewApi.ts
outlook-test-addin/src/components/: Icons.tsx  PipelineProgressCard.tsx  StatusCard.tsx  Steps.tsx  WorkflowCard.tsx
outlook-test-addin/src/outlook/: draftMail.ts
outlook-ui/: eslint.config.js  index.html  manifest.xml  package.json  vite.config.ts
outlook-ui/src/: config.ts  external.tsx  mailWorkflowStorage.ts  main.tsx  serverWorkflow.ts  style.css  types.ts  utils.ts
outlook-ui/src/api/: reviewApi.ts
outlook-ui/src/components/: ActionHelpers.tsx  BatchWorkflowCard.tsx  Steps.tsx  WorkflowCard.tsx
outlook-ui/src/outlook/: draftMail.ts  mailbox.ts
presentation/: project.md
review-ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
review-ui/src/app/: LegacyQueryRedirect.tsx  router.tsx
review-ui/src/app/providers/: QueryProvider.tsx
review-ui/src/features/dashboard/: DashboardPage.tsx
review-ui/src/features/debug/: DebugPage.tsx  useDebug.ts
review-ui/src/features/review/: ReviewDetailPage.tsx
review-ui/src/features/settings/: MailVorlagePage.tsx  SettingsPage.tsx
review-ui/src/features/stammdaten/: StammdatenPage.tsx
review-ui/src/features/status/: StatusPage.tsx
review-ui/src/shared/: api-types.ts
review-ui/tests/e2e/: fixtures.ts  review-ui.spec.ts
samples/: README.md
scripts/: smoke_test.py
src/: extractor.py  ingestion.py  matching.py  output.py  pipeline.py  pricing.py  pyproject.toml  review_ui.py
src/quoting/: __init__.py  cli.py  pipeline.py
src/quoting/api/: __init__.py  _common.py  approval_store.py  container.py  frontend_router.py  job_queue.py  job_worker.py  pipeline_coordinator.py  progress_store.py  response_models.py  review_api.py  settings_store.py  step_handlers.py
src/quoting/api/routers/: attachments.py  debug.py  metrics.py  reviews.py  stammdaten.py  upload.py
src/quoting/api/services/: debug_service.py  metrics_service.py  quality_gate_service.py  quotation_service.py  review_service.py  review_workflow_service.py  upload_service.py
src/quoting/api/use_cases/: __init__.py  common.py  create_review.py  delete_review.py  dtos.py  errors.py  mutations.py  quotation.py  reset_review.py  review_detail.py  review_workflow.py
src/quoting/core/: __init__.py  config.py  logging_setup.py  schema.py
src/quoting/data/: __init__.py  records.py  repository.py
src/quoting/data/prep/: build_stammdaten.py
src/quoting/extraction/: __init__.py  candidates.py  document_loader.py  extractor.py  fast_path.py  json_utils.py  own_party.py  prompts.py  source_guard.py
src/quoting/extraction/llm/: __init__.py  azure.py  base.py  factory.py  gemini.py
src/quoting/ingestion/: __init__.py  file_types.py  mail.py
src/quoting/matching/: __init__.py  matcher.py  stammdaten.py
src/quoting/output/: __init__.py  json_writer.py  pdf_builder.py  reply_body_prompt.py
src/quoting/output/pdf/: pdf_builder.py
src/quoting/output/pdf/offer/: __init__.py  builder.py  canvas.py  config.py  flowables.py  formatting.py  styles.py
src/quoting/pipeline/: __init__.py  context.py  orchestrator.py  progress.py  result.py
src/quoting/pipeline/steps/: __init__.py  extract.py  match.py  price.py  render.py
src/quoting/pricing/: __init__.py  discounts.py  overrides.py  prices.py  quotation.py
src/quoting/reviews/: __init__.py  lifecycle.py  pdfs.py  quotation_store.py  source_highlights.py  sqlite_repository.py  store.py  summary.py  urls.py
src/quoting/ui/: __init__.py  review_agent.py  review_app.py
src/quoting/ui/review_ui/: agent_chat.py  approval_panel.py  compare_view.py  dashboard.py  document_view.py  editor.py  extraction.py  focus_mode.py  layout.py  main.py  matching_view.py  nav.py  pipeline_progress.py  quotation_flow.py  resources.py  review_actions.py  review_context.py  review_loader.py  review_overview.py  settings_page.py  state.py  upload.py
src/quoting/ui/review_ui/steps/: __init__.py  approval_step.py  customer_step.py  positions_step.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_extraction_step.py  test_ingestion.py
tests/unit/: test_anforderung_schema.py  test_approval_store.py  test_data_repository.py  test_debug_llm_probe.py  test_discounts.py  test_document_loader.py  test_extraction_hardening.py  test_fast_path.py  test_finalize_rollback.py  test_frontend_router_anfrage_enrichment.py  test_gemini_cache.py  test_gemini_client.py  test_job_queue.py  test_job_worker.py  test_json_utils.py  test_lifecycle.py  test_llm_retry.py  test_mail_parsing.py  test_matching.py  test_metrics_service.py  test_outlook_item_workflow.py  test_overrides.py  test_own_party.py  test_pdf_offer_config.py  test_pdf_offer_flowables.py  test_pipeline_coordinator.py  test_pricing.py  test_progress_store.py  test_quality_gate_service.py  test_reply_body_prompt.py  test_requirements_acknowledgement_store.py  test_review_agent.py  test_review_delete.py  test_review_summary.py  test_review_ui_state.py  test_review_workflow_use_cases.py  test_schema.py  test_source_highlights.py  test_sqlite_review_repository.py  test_step_handlers.py  (+2 more)
(+75 files in other folders)
