[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quoting-pipeline"
version = "0.3.0"
description = "ElringKlinger Quoting Pipeline: AI-assisted draft quotation generator"
authors = [{ name = "ElringKlinger" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["quoting", "rfq", "llm", "elringklinger", "extraction"]

dependencies = [
    "pydantic>=2.5.0",
    "openai>=1.50.0",
    "google-genai>=0.8.0",
    # Document processing
    "PyMuPDF>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    # Matching
    "rapidfuzz>=3.5.0",
    # Output
    "reportlab>=4.0.0",
    # UI
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
    # Outlook backends
    "msal>=1.36.0",
    "pywin32>=306; platform_system=='Windows'",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "extract-msg>=0.55.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
quoting-pipeline = "quoting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quoting*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]
