[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quoting-pipeline"
version = "0.3.0"
description = "ElringKlinger Quoting Pipeline: AI-assisted draft quotation generator"
authors = [{ name = "ElringKlinger" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["quoting", "rfq", "llm", "elringklinger", "extraction"]

dependencies = [
    "pydantic>=2.5.0",
    "openai>=1.50.0",
    "google-genai>=0.8.0",
    # Document processing
    "PyMuPDF>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    # Matching
    "rapidfuzz>=3.5.0",
    # Fast-path: deterministic Aho-Corasick scan over the article-nr lexicon
    "pyahocorasick>=2.1.0",
    # Output
    "reportlab>=4.0.0",
    # UI
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
    # Outlook backends
    "msal>=1.36.0",
    "pywin32>=306; platform_system=='Windows'",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "extract-msg>=0.55.0",
    "python-multipart>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
quoting-pipeline = "quoting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quoting*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Third-party libraries without bundled type information. Stubs exist for
# some (e.g. ``pandas-stubs``, ``types-reportlab``) but we deliberately do
# not pull them in — they add churn without catching real bugs in our code.
[[tool.mypy.overrides]]
module = [
    "ahocorasick",
    "fitz",
    "openpyxl",
    "openpyxl.*",
    "pandas",
    "pandas.*",
    "reportlab",
    "reportlab.*",
]
ignore_missing_imports = true

# extract_msg ships a ``py.typed`` marker but its stubs are incomplete
# (e.g. ``MSGFile.body``/``subject``/``sender`` aren't typed). Skip its
# bodies so callers see the API as ``Any``.
[[tool.mypy.overrides]]
module = ["extract_msg", "extract_msg.*"]
follow_imports = "skip"
ignore_missing_imports = true
