[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quoting-pipeline"
version = "0.1.0"
description = "ElringKlinger Quoting-Pipeline: AI-gestützte Angebots-Entwurfserstellung (Mail/PDF/Excel → strukturierte Extraktion → Matching → Draft-PDF)"
authors = [
    { name = "Dein Name" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["quoting", "rfq", "llm", "elringklinger", "extraction"]

dependencies = [
    # Kern
    "pydantic>=2.5.0",
    "openai>=1.50.0",
    # Dokumenten-Verarbeitung
    "PyMuPDF>=1.24.0",      # PDF-Seiten zu Bildern rendern (Vision-Input)
    "pandas>=2.0.0",        # Excel/CSV Verarbeitung
    "openpyxl>=3.1.0",      # .xlsx lesen
    "tabulate>=0.9.0",      # pandas.to_markdown()
    # Matching
    "rapidfuzz>=3.5.0",
    # Output
    "reportlab>=4.0.0",     # PDF-Generierung ohne System-Dependencies
    # UI
    "streamlit>=1.30.0",
    # Utility
    "tqdm>=4.66.0",
    "google-generativeai>=0.8.6",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
]
# Optional: semantisches Matching mit Embeddings
semantic = [
    "sentence-transformers>=2.7.0",
]

[project.scripts]
# Damit kannst du nach `pip install -e .` direkt `quoting-pipeline anfrage.pdf` ausführen
quoting-pipeline = "src.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
# Stammdaten mit ausliefern
"src" = ["../data/*.csv"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]  # Line-length wird von Black geregelt

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
